# Fitness-Agent-MVP

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  coach-ui-mockup.html  fitloop-backup-2026-05-30.json  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  start-repmind.bat  tailwind.config.js  vite.config.js  训练计划页面效果图.html
.obsidian/: workspace.json
backend/: .env.example  README.md  __init__.py  alembic.ini  config.py  main.py  requirements.txt  run_dev_server.py
docs/: MVP项目要求.md  RepMind Python 重构设计.md  RepMind V0 开发完成记录.md  RepMind V1.6 开发完成记录.md  RepMind note.md  RepMind 修改意见记录 V2.5-在完成python重构后开始.md  RepMind 修改意见记录 V2.md  RepMind 修改意见记录 V3.md  RepMind 修改意见记录.md  RepMind 修改意见记录V1.md  RepMind_Python重构分析报告.md  Skill 功能设计分析与实现方案.md  coach-ui-design-doc.md  demo_script.md  fitness_coach_mvp_spec.md  idea.md  note.md  plan.md  progress.md  prompt.md  reference.md  today-log-page-preview.html  verification.md  verification_release_plan.md
scripts/: check-release-env.py  kill-fitloop.ps1  kill-repmind.ps1  release_gate.py  run-release-gate.ps1  start-repmind.ps1
src/: App.jsx  index.css
task/: Sprint 2 - 档案与训练计划.md  Sprint 3 - 今日日志与上下文数据.md  Sprint 4 - AI 教练闭环.md  tasks.md  最终验收任务.md  长期推进表.md
tests/: adoptCard.test.js  adoptPlan.test.js  aiResponse.test.js  appShellConfig.test.js  backendClient.test.js  calc.test.js  chatHistory.test.js  chatSuggestionState.test.js  coachBackend.test.js  coachChat.test.js  coachComposer.test.js  coachGuard.test.js  coachView.test.js  customStrengthPlanEditor.test.js  (+34 more)
(+311 files in other folders)
