[project]
name = "fitloop-mvp"
version = "0.1.0"
description = "FitLoop MVP 的本地 Python 依赖管理配置"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite==0.21.0",
    "alembic==1.16.5",
    "fastapi==0.116.1",
    "greenlet==3.5.1",
    "httpx==0.28.1",
    "playwright==1.60.0",
    "pyee==13.0.1",
    "pydantic-settings==2.11.0",
    "pytest==8.4.2",
    "pytest-asyncio==1.1.0",
    "sqlalchemy>=2.0.0",
    "typing_extensions==4.15.0",
    "uvicorn[standard]==0.35.0",
    "python-multipart==0.0.20",
    "pillow>=10",
    "openpyxl>=3.1",
    "python-docx>=1.1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
